--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>e-commerce</title>
 </head>
     
@@ -21,33 +22,24 @@
             <div class="row center">
                 <div class="card">
                     <a href="product.html">
-                        <img src="../images/p1.jpg" alt="product">
+                        <img class="medium" src="../images/p1.jpg" alt="product">
                         <div class="card-body">  
                             <a href="product.html">
                                 <h2>Nike Slim Shirts</h2>
                             </a>
                             <div class="rating">
-                                <span>
-                                    <i class="fa fa-star"></i> </i>
-                                </span>
-                                <span>
-                                    <i class="fa fa-star"></i> </i>
-                                </span>
-                                <span>
-                                    <i class="fa fa-star"></i> </i>
-                                </span>
-                                <span>
-                                    <i class="fa fa-star"></i> </i>
-                                </span>
-                                <span>
-                                    <i class="fa fa-star"></i> </i>
-                                </span>
+                                <span><i class="fa fa-star"></i> </i></span>
+                                <span><i class="fa fa-star"></i> </i></span>
+                                <span><i class="fa fa-star"></i> </i></span>
+                                <span><i class="fa fa-star"></i> </i></span>
+                                <span><i class="fa fa-star"></i> </i></span>
                             </div>
-
+                            <div class="price">
+                                $120
+                            </div>
                         </div>
                     </a>
                 </div>
-
             </div>
         </main>
         <footer class="row center">All Rights Reserved</footer>
