--- a/template/style.css
+++ b/template/style.css
@@ -33,14 +33,22 @@ footer{
     background-color: #203040;
     color: #ffffff;
 }
-/*common styles*/
+/* Common Style */
+h1{
+    font-size: 1.8rem; 
+    padding: 1rem 0;
+}
+h2{
+    font-size: 1.6rem; 
+    padding: 1rem 0;
+}
 a{
     text-decoration: none;
 }
 a:hover{
     color: #df9449;
 }
-/*header links*/
+/* Header Links */
 header a{
     color: #ffffff;
     padding: 1rem;
@@ -50,6 +58,7 @@ a.brand{
     color: #ffffff;
     font-weight:bold;
 }
+/* Common Styles */
 .row{
     display: flex;
     flex-wrap: wrap;
@@ -58,4 +67,33 @@ a.brand{
 }
 .row.center{
     justify-content:center;
+}
+/* Images */
+img{
+    border: radius 0.5rem;
+}
+img.medium{
+    max-width: 29rem;
+    width:100%;
+}
+/* Card */
+.card {
+    border:0.1rem #c0c0c0 solid ;
+    background-color: #f8f8f8;
+    border-radius: 0.5rem;
+    margin: 1rem;
+}
+.card-body {
+    padding: 1rem;
+}
+.card-body > *{
+margin-bottom: 0.5rem ;
+}
+.price{
+    font-size:2rem;
+}
+/* Rating stars */
+.rating span {
+    color: #f0c040;
+    margin: 0.1rem;
 }
