--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -150,6 +150,19 @@ margin-bottom: 0.5rem ;
 .success{
     color : #20a020
 }
-.failure{
+.danger{
     color : #a02020;
+}
+.alert{
+    padding: 1rem;
+    border: 0.1rem solid transparent;
+    border-radius: 0.5rem;
+}
+.alert-info{
+    color: #2020a0;
+    background-color: #e0e0ff;
+}
+.alert-danger{
+    color: #a02020;
+    background-color: #ffe0e0;
 }
